feat: move benchmarks from test to source